Fix carousel display on IE8
In IE8, with image max-width set to 100%, the carousel images were
not displaying. Over-rode the setting in the IE8 CSS file, and now
the carousel is displaying properly.

[ Partial fix for #10345 ]

--- a/docroot/sites/all/themes/site_frontend/sass/ie/ie8.scss
+++ b/docroot/sites/all/themes/site_frontend/sass/ie/ie8.scss
@@ -8,3 +8,11 @@
 	height: 3.5em;
 }
 
+// Homepage carousel tweaks
+.home-page-carousel {
+  // For the carousel fix the image display issue. Setting max-width seems to
+  // break images in the carousel.
+  img {
+    max-width: inherit;
+  }
+}
